# udata-front-kit-universe

./: pyproject.toml
.github/workflows/: check-sync.yml  update-universes.yml
configs/: accessibilite-demo.yaml  accessibilite-prod.yaml  culture-deps-prod.yaml  deps-prod.yaml  ecospheres-demo.yaml
tests/: datagouv_mock.py  test_grist.py
universe/: check_sync.py  datagouv.py  grist.py  util.py
