[project]
name = "udata-front-kit-universe"
version = "1.0.0"
description = "Manage udata-front-kit universe topics on data.gouv.fr"
readme = "README.md"
requires-python = ">= 3.13"
dependencies = [
    "dacite >= 1.9.2",
    "deepmerge >= 2.0.0",
    "minicli >= 0.5.3",
    "pyyaml >= 6.0.3",
    "requests >= 2.32.5",
]

[project.scripts]
universe = "universe.__main__:main"

[dependency-groups]
dev = [
    "pre-commit",
    "pytest>=9.0.3",
    "pytest-responses >= 0.5.1",
    "ruff",
]

[tool.pytest]
strict = true
addopts = [
    "-q",
    "-ra",
    "--import-mode=importlib"
]

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = ["universe"]

[tool.uv]
package = true
